@startuml
title Class Diagram for AddItemCommand Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class AddCommandParser {
  + parse(input: String)
}

class AddItemCommandParser {
  + handleFruit(input: String)
  + handleSnack(input: String)
  + handleDrinks(input: String)
}

class AddItemCommand {
  - categoryName: String
  - item: Item
  + execute(inventory: Inventory, ui: UI)
}

class Inventory {
  + findCategoryByName(categoryName: String)
}

class Category {
  - name: String
  + findItemByName(itemName: String)
  + addItem(item: Item)
}

class Item {
  - name: String
  - quantity: int
  - binLocation: String
}

class InventoryDockException

class UI {
  + showItemAdded(...)
  + showError(message: String)
}

note as N1
  The diagram shows a few representative
  category-specific handlers only.
  See the Developer Guide text for the
  full list of supported categories.
end note

Command <|-- AddItemCommand
AddCommandParser ..> AddItemCommandParser : delegates to
AddItemCommandParser ..> AddItemCommand : creates
AddItemCommand --> Inventory : looks up category
AddItemCommand --> Category : duplicate check + add
AddItemCommand ..> InventoryDockException : throws on duplicate
AddItemCommand --> UI : success/error display
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml

